--- a/index.html
+++ b/index.html
@@ -253,14 +253,14 @@
         <div class="flex flex-1">
           <button
             id="small-btn"
-            class="flex-1 py-3 text-center font-semibold text-gray-900 border-r border-gray-200 active-tab"
+            class="flex-1 py-3 text-center font-semibold border-r border-gray-200 tab-btn tab-small active-tab"
             onclick="setTab('small')"
           >
             Small
           </button>
           <button
             id="big-btn"
-            class="flex-1 py-3 text-center font-semibold text-gray-500"
+            class="flex-1 py-3 text-center font-semibold tab-btn tab-big"
             onclick="setTab('big')"
           >
             Big
@@ -270,17 +270,52 @@
         <!-- Close Button -->
         <button
           id="close-btn"
-          class="w-12 h-12 flex items-center justify-center bg-black text-white text-xl font-bold"
+          class="w-12 h-12 flex items-center justify-center text-white text-xl font-bold tab-close"
         >
           ✕
         </button>
       </div>
 
       <style>
-        .active-tab {
-          color: #000000 !important;
-          font-weight: 700 !important;
-          background-color: #fff;
+        /* Common tab style */
+        .tab-btn {
+          position: relative;
+          color: #444;
+          background: #f9f9f9;
+          transition: all 0.3s ease;
+        }
+
+        /* Underline effect (only shows when active) */
+        .tab-btn.active-tab::after {
+          content: "";
+          position: absolute;
+          left: 0;
+          bottom: 0;
+          width: 100%;
+          height: 3px;
+          background-color: currentColor;
+          border-radius: 2px;
+        }
+
+        /* Small = Yellow */
+        .tab-small.active-tab {
+          background: rgb(8, 168, 101);
+          color: #ffffff;
+        }
+
+        /* Big = Green */
+        .tab-big.active-tab {
+          background: rgb(8, 168, 101);
+          color: #fff;
+        }
+
+        /* Close = Orange/Red */
+        .tab-close {
+          background: rgb(255, 51, 0);
+          transition: all 0.3s ease;
+        }
+        .tab-close:hover {
+          background: rgb(255, 115, 0);
         }
       </style>
 
@@ -308,7 +343,7 @@
               data-link="ac-repair.html"
               data-type="small"
             >
-              <img src="ac icon.png" class="w-8 h-8 mb-0.5" alt="AC" />
+              <img src="ac icon1.png" class="w-8 h-8 mb-0.5" alt="AC" />
               <span
                 class="text-xs text-center leading-tight break-words line-clamp-2"
               >
@@ -323,7 +358,7 @@
               data-type="small"
             >
               <img
-                src="electric icon.png"
+                src="electric icon1.png"
                 class="w-8 h-8 mb-0.5"
                 alt="Electrical"
               />
@@ -341,7 +376,7 @@
               data-type="small"
             >
               <img
-                src="Plumbing icon.png"
+                src="Plumbing icon1.png"
                 class="w-8 h-8 mb-0.5"
                 alt="Plumbing"
               />
@@ -358,7 +393,11 @@
               data-link="event.html"
               data-type="big"
             >
-              <img src="download.jfif" class="w-8 h-8 mb-0.5" alt="Event" />
+              <img
+                src="event management1.png"
+                class="w-8 h-8 mb-0.5"
+                alt="Event"
+              />
               <span
                 class="text-xs text-center leading-tight break-words line-clamp-2"
               >
@@ -373,9 +412,7 @@
           <!-- Services count with border -->
           <div id="services-count"></div>
 
-          <div id="services-list" class="space-y-3">
-            <p class="text-gray-500">Select a category to view services</p>
-          </div>
+          <div id="services-list" class="space-y-3"></div>
         </div>
       </div>
     </div>
@@ -530,6 +567,12 @@
 
       // default show small
       filterCategories("small");
+
+      // ডিফল্ট প্রথম ক্যাটাগরি লোড
+      const firstCategory = document.querySelector("#categories li");
+      if (firstCategory) {
+        firstCategory.click();
+      }
     </script>
 
     <!-- Hero Section -->
