--- a/Plumbing.html
+++ b/Plumbing.html
@@ -3,289 +3,263 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Plumbing Services - VoltFix</title>
     <script src="https://cdn.tailwindcss.com"></script>
-  </head>
-  <body class="bg-gray-50">
-    <!-- Hero Section -->
-    <section class="bg-white">
-      <div
-        class="max-w-7xl mx-auto px-6 py-12 flex flex-col-reverse md:flex-row items-center"
-      >
-        <div class="md:w-1/2 text-center md:text-left space-y-6">
-          <h1 class="text-4xl font-bold text-gray-800">
-            One Call Solves All Your Plumbing Problems
-          </h1>
-          <p class="text-gray-600">
-            Expert repair & installation services at your doorstep.
-          </p>
-          <a
-            href="#services"
-            class="inline-block bg-blue-600 text-white px-6 py-3 rounded-md hover:bg-blue-700 transition"
-            >Book Now</a
-          >
-        </div>
-        <div class="md:w-1/2">
-          <img
-            src="/mnt/data/A_flat-style_digital_illustration_features_a_plumb.png"
-            alt="Hero Image"
-            class="w-full h-auto"
-          />
-        </div>
-      </div>
-    </section>
-
-    <!-- Services Section -->
-    <section id="services" class="py-12 px-6">
-      <div class="text-center mb-10">
-        <h2
-          class="text-2xl font-semibold flex items-center justify-center gap-2"
-        >
-          <img
-            src="https://img.icons8.com/fluency/24/plumbing.png"
-            alt="icon"
-          />
-          Plumbing Services
-        </h2>
-      </div>
-
-      <div
-        class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 max-w-7xl mx-auto"
-      >
-        <!-- Service Card 1 -->
-        <div
-          class="bg-white border shadow-sm p-6 rounded text-center hover:shadow-md transition"
-        >
-          <img
-            src="https://img.icons8.com/ios-filled/50/wrench.png"
-            class="mx-auto mb-4"
-            alt="Tap Install"
-          />
-          <h3 class="text-blue-700 font-semibold">Tap Installation</h3>
-        </div>
-
-        <!-- Service Card 2 -->
-        <div
-          class="bg-white border shadow-sm p-6 rounded text-center hover:shadow-md transition"
-        >
-          <img
-            src="https://img.icons8.com/ios-filled/50/toilet.png"
-            class="mx-auto mb-4"
-            alt="Toilet Fix"
-          />
-          <h3 class="text-blue-700 font-semibold">Toilet Fix</h3>
-        </div>
-
-        <!-- Service Card 3 -->
-        <div
-          class="bg-white border shadow-sm p-6 rounded text-center hover:shadow-md transition"
-        >
-          <img
-            src="https://img.icons8.com/ios-filled/50/water.png"
-            class="mx-auto mb-4"
-            alt="Water Line"
-          />
-          <h3 class="text-blue-700 font-semibold">Water Line</h3>
-        </div>
-
-        <!-- Service Card 4 -->
-        <div
-          class="bg-white border shadow-sm p-6 rounded text-center hover:shadow-md transition"
-        >
-          <img
-            src="https://img.icons8.com/ios-filled/50/pump.png"
-            class="mx-auto mb-4"
-            alt="Pump Repair"
-          />
-          <h3 class="text-blue-700 font-semibold">Pump Repair</h3>
-        </div>
-      </div>
-    </section>
-  </body>
-</html>
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Plumbing Services - VoltFix</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
-      rel="stylesheet"
-    />
+    <title>Plumbing Services</title>
     <style>
-      .hero {
-        background-image: url("https://images.unsplash.com/photo-1581574203361-8fd1fdfdf70b?auto=format&fit=crop&w=1600&q=80");
-        background-size: cover;
-        background-position: center;
+      html {
+        scroll-behavior: smooth;
+      }
+      .glow {
+        box-shadow: 0 0 15px rgba(37, 99, 235, 0.5);
+      }
+      .fade-in {
+        animation: fadeIn 1.2s ease-in-out;
+      }
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+          transform: translateY(20px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
       }
     </style>
   </head>
-  <body class="bg-blue-50 text-gray-800">
-    <!-- Hero Section -->
-    <section class="bg-white py-8 md:py-16">
+
+  <body class="bg-white text-gray-900">
+    <!-- HERO -->
+    <section
+      class="bg-gradient-to-r from-blue-100 via-blue-50 to-white fade-in"
+    >
       <div
-        class="container mx-auto flex flex-col-reverse md:flex-row items-center px-6 md:px-12 gap-10"
+        class="max-w-6xl mx-auto px-4 py-16 grid grid-cols-1 md:grid-cols-2 gap-8 items-center"
       >
-        <!-- Left Text Section -->
-        <div class="w-full md:w-1/2 text-center md:text-left">
-          <h1
-            class="text-3xl md:text-5xl font-bold text-gray-800 mb-4 leading-tight"
-          >
-            One Call Solves <br />
-            All Plumbing Problems
+        <div>
+          <h1 class="text-4xl md:text-5xl font-extrabold text-blue-800">
+            Professional Plumbing Services You Can Trust 💧
           </h1>
-          <p class="text-lg text-gray-600 mb-6">
-            Reliable, quick, and professional plumbing repair services at your
-            doorstep.
+          <p class="mt-4 text-gray-700 text-lg">
+            From leaks to full bathroom installations — we provide 24/7 expert
+            plumbing support for homes and businesses.
           </p>
-          <a
-            href="#services"
-            class="inline-block bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition shadow-md"
-          >
-            Book Now
-          </a>
+
+          <div class="mt-6 flex gap-3">
+            <a
+              href="tel:+8801613381340"
+              class="inline-flex items-center gap-2 px-6 py-3 bg-blue-600 text-white rounded-lg glow hover:scale-105 transition"
+              >📞 Call Now</a
+            >
+            <a
+              href="#contact"
+              class="inline-flex items-center gap-2 px-6 py-3 border border-blue-600 text-blue-700 rounded-lg hover:bg-blue-50 transition"
+              >📝 Book Online</a
+            >
+          </div>
+
+          <div class="mt-6 text-sm text-gray-600">
+            ✅ Same-day repairs · 🚿 Licensed experts · ⭐ Rated 4.9/5
+          </div>
         </div>
 
-        <!-- Right Image Section -->
-        <div class="w-full md:w-1/2">
+        <div class="order-first md:order-last">
           <img
-            src="https://cdn-icons-png.flaticon.com/512/2965/2965567.png"
-            alt="Plumbing Service"
-            class="w-full max-w-sm mx-auto drop-shadow-lg"
+            src="/hero-plumber.jpg"
+            alt="Plumber fixing pipe"
+            class="w-full rounded-2xl shadow-lg object-cover"
           />
         </div>
       </div>
     </section>
 
-    <!-- Our Plumbing Services Section -->
-    <section id="services" class="py-20 bg-white">
-      <div class="max-w-6xl mx-auto px-4 text-center">
-        <h2 class="text-3xl font-bold text-blue-800 mb-12">
-          Our Plumbing Services
-        </h2>
-        <div class="grid md:grid-cols-3 gap-8">
-          <!-- Leak Repair -->
+    <!-- SERVICES GRID -->
+    <section id="services" class="bg-gray-50 py-16 fade-in">
+      <div class="max-w-7xl mx-auto px-4">
+        <div class="text-center mb-12">
+          <h2 class="text-4xl font-extrabold text-blue-800">
+            💦 Our Plumbing Services
+          </h2>
+          <p class="mt-3 text-lg text-gray-600 max-w-2xl mx-auto">
+            A–Z plumbing solutions with professional care.
+          </p>
+          <div class="mt-6 w-24 h-1 bg-blue-600 rounded mx-auto"></div>
+        </div>
+
+        <div
+          class="grid grid-cols-3 sm:grid-cols-5 lg:grid-cols-7 gap-4 text-center"
+        >
+          <!-- Service item -->
           <div
-            class="bg-blue-50 p-6 rounded-xl shadow hover:shadow-lg transition"
+            class="aspect-square bg-white p-3 rounded-lg shadow hover:shadow-lg transition transform hover:scale-105"
           >
-            <img
-              src="https://cdn-icons-png.flaticon.com/512/2933/2933245.png"
-              alt="Leak Repair"
-              class="h-28 mx-auto mb-4"
-            />
-            <h3 class="text-xl font-semibold text-blue-900">Leak Repair</h3>
-            <p class="text-sm mt-2 text-gray-600">
-              Fast repair for pipe and faucet leaks to prevent damage and water
-              waste.
-            </p>
+            <div class="text-3xl">🚰</div>
+            <p class="mt-2 text-xs font-medium">Leak Repair</p>
           </div>
 
-          <!-- Pipe Installation -->
           <div
-            class="bg-blue-50 p-6 rounded-xl shadow hover:shadow-lg transition"
+            class="aspect-square bg-white p-3 rounded-lg shadow hover:shadow-lg transition transform hover:scale-105"
           >
-            <img
-              src="https://cdn-icons-png.flaticon.com/512/7027/7027195.png"
-              alt="Pipe Installation"
-              class="h-28 mx-auto mb-4"
-            />
-            <h3 class="text-xl font-semibold text-blue-900">
-              Pipe Installation
-            </h3>
-            <p class="text-sm mt-2 text-gray-600">
-              Expert installation of new plumbing lines for homes and
-              businesses.
-            </p>
+            <div class="text-3xl">🚿</div>
+            <p class="mt-2 text-xs font-medium">Shower Install</p>
           </div>
 
-          <!-- Water Heater Service -->
           <div
-            class="bg-blue-50 p-6 rounded-xl shadow hover:shadow-lg transition"
+            class="aspect-square bg-white p-3 rounded-lg shadow hover:shadow-lg transition transform hover:scale-105"
           >
-            <img
-              src="https://cdn-icons-png.flaticon.com/512/2592/2592106.png"
-              alt="Water Heater Repair"
-              class="h-28 mx-auto mb-4"
-            />
-            <h3 class="text-xl font-semibold text-blue-900">
-              Water Heater Repair
-            </h3>
-            <p class="text-sm mt-2 text-gray-600">
-              We fix and service all types of hot water heaters with guaranteed
-              safety.
-            </p>
+            <div class="text-3xl">🚽</div>
+            <p class="mt-2 text-xs font-medium">Toilet Fix</p>
+          </div>
+
+          <div
+            class="aspect-square bg-white p-3 rounded-lg shadow hover:shadow-lg transition transform hover:scale-105"
+          >
+            <div class="text-3xl">🔥</div>
+            <p class="mt-2 text-xs font-medium">Water Heater</p>
+          </div>
+
+          <div
+            class="aspect-square bg-white p-3 rounded-lg shadow hover:shadow-lg transition transform hover:scale-105"
+          >
+            <div class="text-3xl">🧯</div>
+            <p class="mt-2 text-xs font-medium">Pipe Replacement</p>
+          </div>
+
+          <div
+            class="aspect-square bg-white p-3 rounded-lg shadow hover:shadow-lg transition transform hover:scale-105"
+          >
+            <div class="text-3xl">🪠</div>
+            <p class="mt-2 text-xs font-medium">Clog Removal</p>
+          </div>
+
+          <div
+            class="aspect-square bg-white p-3 rounded-lg shadow hover:shadow-lg transition transform hover:scale-105"
+          >
+            <div class="text-3xl">💧</div>
+            <p class="mt-2 text-xs font-medium">Drain Cleaning</p>
+          </div>
+
+          <div
+            class="aspect-square bg-white p-3 rounded-lg shadow hover:shadow-lg transition transform hover:scale-105"
+          >
+            <div class="text-3xl">🏠</div>
+            <p class="mt-2 text-xs font-medium">Home Plumbing</p>
+          </div>
+
+          <div
+            class="aspect-square bg-white p-3 rounded-lg shadow hover:shadow-lg transition transform hover:scale-105"
+          >
+            <div class="text-3xl">🏢</div>
+            <p class="mt-2 text-xs font-medium">Commercial Work</p>
+          </div>
+
+          <div
+            class="aspect-square bg-white p-3 rounded-lg shadow hover:shadow-lg transition transform hover:scale-105"
+          >
+            <div class="text-3xl">🌧</div>
+            <p class="mt-2 text-xs font-medium">Outdoor Drainage</p>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- Features Section -->
-    <section class="py-20 bg-gradient-to-r from-blue-50 to-white">
-      <div class="max-w-6xl mx-auto px-4">
-        <h2 class="text-3xl font-bold text-center text-blue-800 mb-12">
-          Why Choose VoltFix?
-        </h2>
-        <div class="grid md:grid-cols-3 gap-8 text-center">
-          <div>
-            <div class="text-blue-600 text-4xl mb-2">🛠</div>
-            <h4 class="text-xl font-semibold text-blue-900">
-              Certified Plumbers
-            </h4>
-            <p class="text-gray-600 text-sm mt-2">
-              Trained and verified professionals you can trust.
-            </p>
-          </div>
-
-          <div>
-            <div class="text-blue-600 text-4xl mb-2">⚡</div>
-            <h4 class="text-xl font-semibold text-blue-900">Quick Response</h4>
-            <p class="text-gray-600 text-sm mt-2">
-              Same-day and emergency plumbing solutions available.
-            </p>
-          </div>
-
-          <div>
-            <div class="text-blue-600 text-4xl mb-2">💰</div>
-            <h4 class="text-xl font-semibold text-blue-900">
-              Transparent Pricing
-            </h4>
-            <p class="text-gray-600 text-sm mt-2">
-              No hidden charges, clear quotes before work starts.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- CTA Section -->
-    <section class="py-20 bg-blue-800 text-white text-center">
-      <h2 class="text-3xl font-bold mb-4">Need Urgent Plumbing Help?</h2>
-      <p class="mb-6">
-        Call us now or book online and we'll take care of the rest.
-      </p>
-      <a
-        href="contact.html"
-        class="bg-white text-blue-800 px-6 py-3 rounded-full font-semibold hover:bg-blue-100"
-        >Contact Us</a
-      >
-    </section>
-
-    <!-- Footer -->
-    <footer class="bg-white border-t py-6">
+    <!-- CONTACT FORM -->
+    <section id="contact" class="bg-white py-16 border-t fade-in">
       <div
-        class="max-w-6xl mx-auto px-4 flex flex-col md:flex-row justify-between items-center"
+        class="max-w-6xl mx-auto px-4 grid grid-cols-1 md:grid-cols-2 gap-8 items-center"
       >
-        <p class="text-gray-600 text-sm">
-          &copy; 2025 VoltFix. All rights reserved.
-        </p>
-        <div class="space-x-4 mt-4 md:mt-0">
-          <a href="#" class="text-gray-500 hover:text-blue-600">Facebook</a>
-          <a href="#" class="text-gray-500 hover:text-blue-600">Instagram</a>
-          <a href="#" class="text-gray-500 hover:text-blue-600">Twitter</a>
+        <div>
+          <h3 class="text-2xl font-bold text-blue-800">Need Help Fast?</h3>
+          <p class="text-gray-600 mt-2">
+            Our plumbers are available 24/7 for all emergencies.
+          </p>
+
+          <div class="mt-6">
+            <a
+              href="tel:+880123456789"
+              class="inline-flex items-center gap-2 px-6 py-3 bg-blue-600 text-white rounded-md glow hover:scale-105 transition"
+              >📞 Call +880 1234 56789</a
+            >
+          </div>
         </div>
+
+        <form class="bg-gray-50 p-6 rounded-lg shadow-sm">
+          <div class="grid gap-3">
+            <input
+              type="text"
+              name="name"
+              placeholder="Full name"
+              required
+              class="p-3 rounded border"
+            />
+            <input
+              type="tel"
+              name="phone"
+              placeholder="Phone"
+              required
+              class="p-3 rounded border"
+            />
+            <select name="service" class="p-3 rounded border">
+              <option>Choose a service</option>
+              <option>Leak Repair</option>
+              <option>Toilet Fix</option>
+              <option>Water Heater</option>
+              <option>Pipe Replacement</option>
+              <option>Emergency</option>
+            </select>
+            <input
+              type="text"
+              name="address"
+              placeholder="Address (optional)"
+              class="p-3 rounded border"
+            />
+            <button
+              type="submit"
+              class="mt-2 px-4 py-3 bg-blue-600 text-white rounded-md hover:scale-105 transition"
+            >
+              Request Quote
+            </button>
+          </div>
+        </form>
+      </div>
+    </section>
+
+    <!-- FOOTER -->
+    <footer class="bg-blue-950 text-gray-300">
+      <div
+        class="max-w-6xl mx-auto px-4 py-8 grid grid-cols-1 md:grid-cols-3 gap-6"
+      >
+        <div>
+          <img src="/logo-white.png" alt="logo" class="h-8" />
+          <p class="mt-3 text-sm">
+            Reliable plumbing service in your city. Certified, honest, and
+            affordable.
+          </p>
+        </div>
+
+        <div>
+          <h4 class="font-semibold">Contact</h4>
+          <p class="text-sm mt-2">📞 +880 1234 56789</p>
+          <p class="text-sm">📍 Your City, Bangladesh</p>
+        </div>
+
+        <div>
+          <h4 class="font-semibold">Quick links</h4>
+          <ul class="mt-2 text-sm space-y-1">
+            <li><a href="#services">Services</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="/about">About</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="border-t border-blue-900 text-center py-4 text-sm">
+        © <span id="year"></span> [Company]. All rights reserved.
       </div>
     </footer>
+
+    <script>
+      document.getElementById("year").textContent = new Date().getFullYear();
+    </script>
   </body>
 </html>
