--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
             <li
               class="py-2 px-2 flex flex-col items-center cursor-pointer hover:bg-gray-200"
               onclick="showServices(this, 'Plumbing Services')"
-              data-link="plumbing.html"
+              data-link="new.html"
               data-type="small"
             >
               <img
@@ -1306,3 +1306,4 @@
     </footer>
   </body>
 </html>
+
